--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -18,13 +18,16 @@
 
     <body>
         <div class="navbar">
-            <a class="navbar-brand" href="#"> COBRA <span id='dashboardTitle'> DASHBOARD </span></a>
-            <input class='searchHolder' placeholder="search">
             <ul class="nav">
                 <li>
                     <img style='margin-left: 10px; height: 50px; width: 50px;' src='assets/images/wells.png'>
                 </li>
             </ul>
+            <input class='searchHolder' placeholder="search">
+            <a class="navbar-brand" href="#"> COBRA <span id='dashboardTitle'> DASHBOARD </span></a>
+            <a class="navbar-brand" id='cmor' href="#"> Corporate Model Risk Group (CMoR) </a>
+
+          
         </div>
         <!-- <div clear='both'></div> -->
         <script src="assets/js/scatter.js"></script>
